--- a/cv.html
+++ b/cv.html
@@ -45,6 +45,9 @@ nesim83sm.nm@gmail.com</span>
     </div>
 </section>
 </header>
+Hej ,
+Jag söker tjänsten fordonstekniker i Sandviken, Jag läste igenom annonsen och jag uppfyller kraven med 8 år erfarenhet och massa utbildningar, förutom det så hade jag jobbat på båda verkstäderna Sandvikens och Valbos, Jag känner lokalerna och har själv gjort ändrigar som är fortfarande  kvar på dessa verkstäder. Jag har jobbat med andra företag tidigare som skötte trafiken i Sandviken och lärde mig mycket av deras misstag, och jag hoppas att få chansen att dela med mina erfarenheter och allt jag lärde mig från den branschen för att undvika dessa misstag. Jag har gjort analys till varje fall och kan gärna dela med om så önskas. 
+
 
  
     
