--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,47 +11,171 @@
     <script src="fontawsome.js" defer></script>
     <title>Document</title>
 </head>
+
 <body>
-<header>
-<section class="letters">
-    <div><h2>N</h2></div>
-    <div><h2>|</h2></div>
-    <div><h2>M</h2></div>
-</section>
-<h1>NESIM MEHDI</h1>
+    <header>
+        <section class="letters">
+            <div>
+                <h2>N</h2>
+            </div>
+            <div>
+                <h2>|</h2>
+            </div>
+            <div>
+                <h2>M</h2>
+            </div>
+        </section>
+        <h1>NESIM MEHDI</h1>
 
-<section class="mainTitle">
-    <!-- <div class="lines"><hr></div> -->
-    <div><h4>FORDONSTEKNIKER</h4></div>
-    <!-- <div class="lines"><hr></div> -->
-</section>
-<section class="contactInfo">
-    <div class="adress">
-        <span>
-            <i class="fa-solid fa-location-dot" ></i><br>
-            Blodriskegränd 12D, <br>Sandviken, 81153, <br>Sverige
+        <section class="main-title">
+            <div class="vertical-line">
+                <div></div>
+            </div>
+            <div>
+                <!-- Main Title Of The Job -->
+                <h4>FORDONSTEKNIKER</h4>
+            </div>
+            <div class="vertical-line">
+                <div></div>
+            </div>
+        </section>
 
-        </span>
+        <section class="contactInfo">
+            <div class="adress">
+                <p>
+                    <i class="fa-solid fa-location-dot"></i><br>
+                    Blodriskegränd 12D, <br>Sandviken, 81153, <br>Sverige
+
+                </p>
+            </div>
+            <div class="phone">
+                <p id="phonenumber"><i class="fa-sharp fa-solid fa-phone"></i><br>
+                    0704164744
+                </p>
+            </div>
+            <div class="email">
+                <p>
+                    <i class="fa-sharp fa-solid fa-envelope"></i>
+                    <br>
+                    nesim83sm.nm@gmail.com
+                </p>
+            </div>
+        </section>
+    </header>
+    <div class="main">
+        <div class="sidebar">
+            <div class="sidebar-content">
+                <div id="personal-image">
+                    <img src="personalpic.png" alt="Personal picture of the cv owner">
+                </div>
+                <div class="education">
+                    <h3 class="sidebar-title">
+                        EDUCATION
+                    </h3>
+                    <div class="education-item">
+                        <h4 class="education-title">Bachelor of Science</h4>
+                        <h4 class="education-place">Bghdad Unversitet 2005</h4>
+                        <p>
+                            Jag har <strong><em>kemiexamen</em></strong> och jobbade som kemisk analytiker på den
+                            största elkraften i Bagdad ِ<strong>Al-Quds
+                                Termiska Elkraften</strong>. Jag jobbade där 13mån innan jag kommer till Sverige.
+                        </p>
+                    </div>
+                    <div class="education-item">
+                        <h4 class="education-title">High School diploma</h4>
+                        <h4 class="education-place">Borgarskolan / gävle / 2011</h4>
+                        <p>
+                            Personbilsmekaniker 1års utbildning man lär sig att felsöka och reparera fel på personbilar.
+                        </p>
+                    </div>
+                    <div class="education-item">
+                        <h4 class="education-title">High School diploma</h4>
+                        <h4 class="education-place">Borgarskolan / gävle / 2012</h4>
+                        <p>
+                            Lastbil/Bussmekaniker man lärde sig att utföra felsökningar och reparationer på bussar och
+                            lasbilar samt att lära känna andra system som inte finns på personbilar som luftsystemet och
+                            hydrauliska systemet samt alla extra verktyg som hör till den branschen.
+                        </p>
+                    </div>
+
+                    <div class="education-item">
+                        <h4 class="education-title">High School diploma</h4>
+                        <h4 class="education-place">CVL / Sandviken / 2020</h4>
+                        <p>
+                            IT-Utvecklare man lär sig att skriva kod och programmera , lära känna programmeringsspråken
+                            för att sen förtsätta på högre nivå.
+                        </p>
+                    </div>
+                    
+                    <div class="education-item">
+                        <h4 class="education-title">High School diploma</h4>
+                        <h4 class="education-place">AMU / 2020</h4>
+                        <p>
+                            Supporttekniker <br>
+                            Arbetsmarknadsutbildning
+                            i utbildningen ingår MS office , Windows Server, Nätverk, Kunddsupport och programmering i C# och VB & Databasar på basnivå.
+                        </p>
+                    </div>
+
+                </div>
+                <div class="courses">
+                    <h3 class="sidebar-title">courses</h3>
+                    <div class="course-item">
+                        <h4 class="education-title">VDL Elsystem</h4>
+                        <h4 class="education-place">VDL Bus & Coach Stockholm <br>
+                        jan 2013 - jan 2013
+                        </h4>
+                    </div>
+                    <div class="course-item">
+                        <h4 class="education-title">VDL E6 Service & Diagnos</h4>
+                        <h4 class="education-place">VDL Bus & Coach Stockholm <br>
+                        Apr 2018 - Apr 2018
+                        </h4>
+                    </div>
+                    <div class="course-item">
+                        <h4 class="education-title">Ellära för fordonstekniker</h4>
+                        <h4 class="education-place">HKH Kompetensutveckling <br>
+                        jun 2018 - jun 2018
+                        </h4>
+                    </div>
+                    <div class="course-item">
+                        <h4 class="education-title">Supporttekniker</h4>
+                        <h4 class="education-place">Lexicon Gävle <br>
+                        jul 2020 - dec 2020
+                        </h4>
+                    </div>
+                </div>
+                <div class="driving-license">
+                <h3 class="sidebar-title">driving license</h3>
+                <h4 class="education-title">driving license catagory</h4>
+                <p>B Körkort & Taxi Körkort</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="main-content">
+            <p>
+                Hej ,
+                Jag söker tjänsten fordonstekniker i Sandviken, Jag läste igenom annonsen och jag uppfyller kraven med 8
+                år
+                erfarenhet och massa utbildningar, förutom det så hade jag jobbat på båda verkstäderna Sandvikens och
+                Valbos, Jag
+                känner lokalerna och har själv gjort ändrigar som är fortfarande kvar på dessa verkstäder. Jag har
+                jobbat med andra
+                företag tidigare som skötte trafiken i Sandviken och lärde mig mycket av deras misstag, och jag hoppas
+                att få
+                chansen att dela med mina erfarenheter och allt jag lärde mig från den branschen för att undvika dessa
+                misstag. Jag
+                har gjort analys till varje fall och kan gärna dela med om så önskas.
+            </p>
+        </div>
+
+
     </div>
-    <div class="phone">
-        <span id="phonenumber"><i class="fa-sharp fa-solid fa-phone"></i><br>
-            0704164744
-        </span>
-    </div>
-    <div class="email">
-<span>
-    <i class="fa-sharp fa-solid fa-envelope"></i>
-    <br>
-nesim83sm.nm@gmail.com</span>
-    </div>
-</section>
-</header>
-Hej ,
-Jag söker tjänsten fordonstekniker i Sandviken, Jag läste igenom annonsen och jag uppfyller kraven med 8 år erfarenhet och massa utbildningar, förutom det så hade jag jobbat på båda verkstäderna Sandvikens och Valbos, Jag känner lokalerna och har själv gjort ändrigar som är fortfarande  kvar på dessa verkstäder. Jag har jobbat med andra företag tidigare som skötte trafiken i Sandviken och lärde mig mycket av deras misstag, och jag hoppas att få chansen att dela med mina erfarenheter och allt jag lärde mig från den branschen för att undvika dessa misstag. Jag har gjort analys till varje fall och kan gärna dela med om så önskas. 
 
 
- 
-    
 
 </body>
+
 </html>
