--- a/cv.html
+++ b/cv.html
@@ -106,14 +106,15 @@
                             för att sen förtsätta på högre nivå.
                         </p>
                     </div>
-                    
+
                     <div class="education-item">
                         <h4 class="education-title">High School diploma</h4>
                         <h4 class="education-place">AMU / 2020</h4>
                         <p>
                             Supporttekniker <br>
                             Arbetsmarknadsutbildning
-                            i utbildningen ingår MS office , Windows Server, Nätverk, Kunddsupport och programmering i C# och VB & Databasar på basnivå.
+                            i utbildningen ingår MS office , Windows Server, Nätverk, Kunddsupport och programmering i
+                            C# och VB & Databasar på basnivå.
                         </p>
                     </div>
 
@@ -123,52 +124,105 @@
                     <div class="course-item">
                         <h4 class="education-title">VDL Elsystem</h4>
                         <h4 class="education-place">VDL Bus & Coach Stockholm <br>
-                        jan 2013 - jan 2013
+                            jan 2013 - jan 2013
                         </h4>
                     </div>
                     <div class="course-item">
                         <h4 class="education-title">VDL E6 Service & Diagnos</h4>
                         <h4 class="education-place">VDL Bus & Coach Stockholm <br>
-                        Apr 2018 - Apr 2018
+                            Apr 2018 - Apr 2018
                         </h4>
                     </div>
                     <div class="course-item">
                         <h4 class="education-title">Ellära för fordonstekniker</h4>
                         <h4 class="education-place">HKH Kompetensutveckling <br>
-                        jun 2018 - jun 2018
+                            jun 2018 - jun 2018
                         </h4>
                     </div>
                     <div class="course-item">
                         <h4 class="education-title">Supporttekniker</h4>
                         <h4 class="education-place">Lexicon Gävle <br>
-                        jul 2020 - dec 2020
+                            jul 2020 - dec 2020
                         </h4>
                     </div>
                 </div>
                 <div class="driving-license">
-                <h3 class="sidebar-title">driving license</h3>
-                <h4 class="education-title">driving license catagory</h4>
-                <p>B Körkort & Taxi Körkort</p>
+                    <h3 class="sidebar-title">driving license</h3>
+                    <h4 class="education-title">driving license catagory</h4>
+                    <p>B Körkort & Taxi Körkort</p>
                 </div>
             </div>
         </div>
 
 
         <div class="main-content">
-            <p>
-                Hej ,
-                Jag söker tjänsten fordonstekniker i Sandviken, Jag läste igenom annonsen och jag uppfyller kraven med 8
-                år
-                erfarenhet och massa utbildningar, förutom det så hade jag jobbat på båda verkstäderna Sandvikens och
-                Valbos, Jag
-                känner lokalerna och har själv gjort ändrigar som är fortfarande kvar på dessa verkstäder. Jag har
-                jobbat med andra
-                företag tidigare som skötte trafiken i Sandviken och lärde mig mycket av deras misstag, och jag hoppas
-                att få
-                chansen att dela med mina erfarenheter och allt jag lärde mig från den branschen för att undvika dessa
-                misstag. Jag
-                har gjort analys till varje fall och kan gärna dela med om så önskas.
-            </p>
+            <div class="content">
+                <p>
+                    Hej ,
+                    Jag söker tjänsten fordonstekniker i Sandviken, Jag läste igenom annonsen och jag uppfyller kraven
+                    med 8
+                    år
+                    erfarenhet och massa utbildningar, förutom det så hade jag jobbat på båda verkstäderna Sandvikens
+                    och
+                    Valbos, Jag
+                    känner lokalerna och har själv gjort ändrigar som är fortfarande kvar på dessa verkstäder. Jag har
+                    jobbat med andra
+                    företag tidigare som skötte trafiken i Sandviken och lärde mig mycket av deras misstag, och jag
+                    hoppas
+                    att få
+                    chansen att dela med mina erfarenheter och allt jag lärde mig från den branschen för att undvika
+                    dessa
+                    misstag. Jag
+                    har gjort analys till varje fall och kan gärna dela med om så önskas.
+                </p>
+                <h3 class="main-content-title">work experience</h3>
+                <div class="main-content-item">
+                    <div class="mc-item-place-time">
+                        <h5 class="education-title">
+                            Sandvikens Kommun
+                        </h5>
+                        <h5 class="education-place">
+                            jun 2008 - Aug 2008 sandviken
+                        </h5>
+                    </div>
+                    <div class="mc-item-description">
+                        <div class="mc-left-styling">
+                            <div class="circle"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div>
+                            <h5 class="education-title"> Arbetsledare</h5>
+                            <p>
+                                Jobbade som arbetsledare till en grupp av ungdommar på Sörtuttbadet under sommalovet, då
+                                skulle man lära ungdommarna försäljningen i en liten kiosk där och sköta de andra
+                                arbetsuppgifterna.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-content-item">
+                    <div class="mc-item-place-time">
+                        <h5 class="education-title">
+                            Sandvikens Kommun
+                        </h5>
+                        <h5 class="education-place">
+                            jun 2008 - Aug 2008 sandviken
+                        </h5>
+                    </div>
+                    <div class="mc-item-description">
+                        <div class="mc-left-styling">
+                            <div class="circle"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div>
+                            <h5 class="education-title"> Arbetsledare</h5>
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
 
