--- a/cv.html
+++ b/cv.html
@@ -217,7 +217,96 @@
                         <div>
                             <h5 class="education-title"> Arbetsledare</h5>
                             <p>
-
+                                  Samma som förra året.  
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-content-item">
+                    <div class="mc-item-place-time">
+                        <h5 class="education-title">
+                            Nobina AB
+                        </h5>
+                        <h5 class="education-place">
+                            May 2012 - Dec 2012 Sandviken
+                        </h5>
+                    </div>
+                    <div class="mc-item-description">
+                        <div class="mc-left-styling">
+                            <div class="circle"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div>
+                            <h5 class="education-title"> Bussmekaniker</h5>
+                            <p>
+                                Under perioden av min utbildning som lastbilsmekaniker fick jag en praktikplats på verkstaden i Sandviken, när verkstadschefen såg att jag kan mycket el och alla system erbjöd han mig att jobba åt de. Då hade de gamla Volvo bussar som 90% av de är trasiga och behöver kontinuerlig reparation då fick man uppleva stressen och belastningen av jobbet på högsta nivå.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-content-item">
+                    <div class="mc-item-place-time">
+                        <h5 class="education-title">
+                            VS & Persson AB
+                        </h5>
+                        <h5 class="education-place">
+                            Dec 2012 - Mar 2017
+                        </h5>
+                    </div>
+                    <div class="mc-item-description">
+                        <div class="mc-left-styling">
+                            <div class="circle"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div>
+                            <h5 class="education-title"> bussmekaniker</h5>
+                            <p>
+                               <strong>Ny utmaning nya bussmärke och flera bussar.</strong> <br>
+                                Under den perioden utförde jag alla sorter av reparationer och felsökningar på följande bussmärken VDL, Mercedes, Volvo, Temsa och Setra. Samt gick jag  följande utbildningar VDL el och kommunikationer mellan styrenheter, VDL Service och reparation E6 motorer och VDL dörrsystem samt massa andra utbildningar som jag lärde mig själv från VDL documentation som klimatsytemet , dörrsystemet på dubbeldäckarna som var unikt, värmesystmet och mm.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-content-item">
+                    <div class="mc-item-place-time">
+                        <h5 class="education-title">
+                            Sandvikens Kommun
+                        </h5>
+                        <h5 class="education-place">
+                            jun 2008 - Aug 2008 sandviken
+                        </h5>
+                    </div>
+                    <div class="mc-item-description">
+                        <div class="mc-left-styling">
+                            <div class="circle"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div>
+                            <h5 class="education-title"> Arbetsledare</h5>
+                            <p>
+                                  Samma som förra året.  
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-content-item">
+                    <div class="mc-item-place-time">
+                        <h5 class="education-title">
+                            Sandvikens Kommun
+                        </h5>
+                        <h5 class="education-place">
+                            jun 2008 - Aug 2008 sandviken
+                        </h5>
+                    </div>
+                    <div class="mc-item-description">
+                        <div class="mc-left-styling">
+                            <div class="circle"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div>
+                            <h5 class="education-title"> Arbetsledare</h5>
+                            <p>
+                                  Samma som förra året.  
                             </p>
                         </div>
                     </div>
