--- a/cv.html
+++ b/cv.html
@@ -62,6 +62,9 @@
             </div>
         </section>
     </header>
+<!-- ======================================================================= -->
+<!--Sidebar & Main content start here -->
+<!-- ======================================================================= -->
     <div class="main">
         <div class="sidebar">
             <div class="sidebar-content">
@@ -154,7 +157,7 @@
             </div>
         </div>
 
-
+<!-- ==================  main content ======================================== -->
         <div class="main-content">
             <div class="content">
                 <p>
@@ -176,6 +179,7 @@
                     har gjort analys till varje fall och kan gärna dela med om så önskas.
                 </p>
                 <h3 class="main-content-title">work experience</h3>
+                <!-- ===============  1  ================== -->
                 <div class="main-content-item">
                     <div class="mc-item-place-time">
                         <h5 class="education-title">
@@ -200,13 +204,14 @@
                         </div>
                     </div>
                 </div>
+                <!-- ==================  2   =================== -->
                 <div class="main-content-item">
                     <div class="mc-item-place-time">
                         <h5 class="education-title">
                             Sandvikens Kommun
                         </h5>
                         <h5 class="education-place">
-                            jun 2008 - Aug 2008 sandviken
+                            jun 2009 - Aug 2009 sandviken
                         </h5>
                     </div>
                     <div class="mc-item-description">
@@ -217,11 +222,12 @@
                         <div>
                             <h5 class="education-title"> Arbetsledare</h5>
                             <p>
-                                  Samma som förra året.  
+                                Samma som förra året.
                             </p>
                         </div>
                     </div>
                 </div>
+                <!-- ======================= 3 ========================= -->
                 <div class="main-content-item">
                     <div class="mc-item-place-time">
                         <h5 class="education-title">
@@ -239,18 +245,23 @@
                         <div>
                             <h5 class="education-title"> Bussmekaniker</h5>
                             <p>
-                                Under perioden av min utbildning som lastbilsmekaniker fick jag en praktikplats på verkstaden i Sandviken, när verkstadschefen såg att jag kan mycket el och alla system erbjöd han mig att jobba åt de. Då hade de gamla Volvo bussar som 90% av de är trasiga och behöver kontinuerlig reparation då fick man uppleva stressen och belastningen av jobbet på högsta nivå.
+                                Under perioden av min utbildning som lastbilsmekaniker fick jag en praktikplats på
+                                verkstaden i Sandviken, när verkstadschefen såg att jag kan mycket el och alla system
+                                erbjöd han mig att jobba åt de. Då hade de gamla Volvo bussar som 90% av de är trasiga
+                                och behöver kontinuerlig reparation då fick man uppleva stressen och belastningen av
+                                jobbet på högsta nivå.
                             </p>
                         </div>
                     </div>
                 </div>
+                <!-- ==================  4  ================== -->
                 <div class="main-content-item">
                     <div class="mc-item-place-time">
                         <h5 class="education-title">
                             VS & Persson AB
                         </h5>
                         <h5 class="education-place">
-                            Dec 2012 - Mar 2017
+                            Dec 2012 - Mar 2017 sandviken
                         </h5>
                     </div>
                     <div class="mc-item-description">
@@ -261,19 +272,25 @@
                         <div>
                             <h5 class="education-title"> bussmekaniker</h5>
                             <p>
-                               <strong>Ny utmaning nya bussmärke och flera bussar.</strong> <br>
-                                Under den perioden utförde jag alla sorter av reparationer och felsökningar på följande bussmärken VDL, Mercedes, Volvo, Temsa och Setra. Samt gick jag  följande utbildningar VDL el och kommunikationer mellan styrenheter, VDL Service och reparation E6 motorer och VDL dörrsystem samt massa andra utbildningar som jag lärde mig själv från VDL documentation som klimatsytemet , dörrsystemet på dubbeldäckarna som var unikt, värmesystmet och mm.
+                                <strong>Ny utmaning nya bussmärke och flera bussar.</strong> <br>
+                                Under den perioden utförde jag alla sorter av reparationer och felsökningar på följande
+                                bussmärken VDL, Mercedes, Volvo, Temsa och Setra. Samt gick jag följande utbildningar
+                                VDL el och kommunikationer mellan styrenheter, VDL Service och reparation E6 motorer och
+                                VDL dörrsystem samt massa andra utbildningar som jag lärde mig själv från VDL
+                                documentation som klimatsytemet , dörrsystemet på dubbeldäckarna som var unikt,
+                                värmesystmet och mm.
                             </p>
                         </div>
                     </div>
                 </div>
+                <!-- ==================  5  ================== -->
                 <div class="main-content-item">
                     <div class="mc-item-place-time">
                         <h5 class="education-title">
-                            Sandvikens Kommun
+                            neoplan väst Ab
                         </h5>
                         <h5 class="education-place">
-                            jun 2008 - Aug 2008 sandviken
+                            mar 2017 - Aug 2018 gävle
                         </h5>
                     </div>
                     <div class="mc-item-description">
@@ -282,20 +299,27 @@
                             <div class="line"></div>
                         </div>
                         <div>
-                            <h5 class="education-title"> Arbetsledare</h5>
+                            <h5 class="education-title"> bussmekaniker</h5>
                             <p>
-                                  Samma som förra året.  
+                                <strong>Ny utmaning nya bussmärken avancerade reparationer.</strong><br>
+                                Här fick jag lära känna två nya bussmärke MAN, Scania,
+                                fick utföra massa elreparationer och felsökningar och fast det var krångligt och nytt
+                                elsystem för mig så lyckades jag från dag ett att lösa elproblem på en buss som hade
+                                stått på verkstaden i 3 månader. Verkstaden kunde ta emot externa kunder och det var en
+                                bra period för Verkstaden. Under den perioden blev jag ansvarig för elreparationer på
+                                gasbussarna samt allt som inte gick att lösa.
                             </p>
                         </div>
                     </div>
                 </div>
+                <!-- =================  6  ================= -->
                 <div class="main-content-item">
                     <div class="mc-item-place-time">
                         <h5 class="education-title">
-                            Sandvikens Kommun
+                            SBT AB
                         </h5>
                         <h5 class="education-place">
-                            jun 2008 - Aug 2008 sandviken
+                            Mar 2018 - jul 2018 sandviken/valbo
                         </h5>
                     </div>
                     <div class="mc-item-description">
@@ -304,20 +328,48 @@
                             <div class="line"></div>
                         </div>
                         <div>
-                            <h5 class="education-title"> Arbetsledare</h5>
+                            <h5 class="education-title"> bussmekaniker</h5>
                             <p>
-                                  Samma som förra året.  
+                                Här fick man jobba med fel arbetsgivare förutom det så hade jag gjort min bästa och
+                                lagade alla bussar som verkstaden inte kunde laga samt försökte jag med allt jag kunde att dela med
+                                min kunskap och erfarehet.    
                             </p>
                         </div>
                     </div>
                 </div>
+                <div class="main-contet-item">
+                    <h3 class="main-content-title">skills</h3>
+                    <div class="skills">
+                    <ul>
+                        <li><span>El-System personbilar <strong>/</strong> bussar <strong>/</strong> lastbilar</span> </li>
+                        <li><span>luftsystem,bromsar, dörrar, suspensions, extra tillbehör</span> </li>
+                        <li><span>Klimatsystemet/extravärmare diesel & gas</span> </li>
+                        <li><span>Diagnosverktyg Texa, Mancats, Wabco</span> </li>
+                        <li><span>Programmeringsspråk/frontend HTML, CSS, JS </span> </li>
+                        <li><span>Programmerig/backend C#, PHP , NodeJS</span> </li>
+                        <li><span>Databas Sql, MySql, JSON</span> </li>
+                    </ul>
+                    </div>
+                </div>
+
+                <div class="main-contet-item">
+                    <h3 class="main-content-title">Languages</h3>
+                    <div class="languages">
+                    <ul>
+                        <li><span>Svenska</span> </li>
+                        <li><span>Arbiska</span> </li>
+                        <li><span>Engelska</span> </li>     
+                    </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
-
-
     </div>
 
-
+<footer>
+    <p>Copyright &copy 2023 Nesim Mehdi </p>
+</footer>
 
 </body>
 
