--- a/cv.html
+++ b/cv.html
@@ -357,7 +357,7 @@
                     <div class="languages">
                     <ul>
                         <li><span>Svenska</span> </li>
-                        <li><span>Arbiska</span> </li>
+                        <li><span>Arabiska</span> </li>
                         <li><span>Engelska</span> </li>     
                     </ul>
                     </div>
