--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="cv.css">
     <script src="https://kit.fontawesome.com/7748ffefd9.js" crossorigin="anonymous"></script>
     <script src="fontawsome.js" defer></script>
-    <title>Document</title>
+    <title>CV Nesim Mehdi</title>
 </head>
 
 <body>
@@ -319,7 +319,7 @@
                             SBT AB
                         </h5>
                         <h5 class="education-place">
-                            Mar 2018 - jul 2018 sandviken/valbo
+                            Mar 2018 - jul 2018 sandviken / valbo
                         </h5>
                     </div>
                     <div class="mc-item-description">
