--- a/cv.html
+++ b/cv.html
@@ -116,7 +116,7 @@
                         <p>
                             Supporttekniker <br>
                             Arbetsmarknadsutbildning
-                            i utbildningen ingår MS office , Windows Server, Nätverk, Kunddsupport och programmering i
+                            i utbildningen ingår MS office , Windows Server, Nätverk, Kundsupport och programmering i
                             C# och VB & Databasar på basnivå.
                         </p>
                     </div>
