--- a/cv.html
+++ b/cv.html
@@ -154,6 +154,11 @@
                     <h4 class="education-title">driving license catagory</h4>
                     <p>B Körkort & Taxi Körkort</p>
                 </div>
+
+                <div class="driving-license">
+                    <h3 class="sidebar-title">references</h3>
+                    <p>Lämnas på begäran.</p>
+                </div>
             </div>
         </div>
 
