--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>CV </title>
 </head>
 <body>
-    <h1>Welcome to My CV</h1>
+    <h1>Welcome to Nesim Mehdi  
+        <a href="cv.html">CV</a>
+    </h1>
 </body>
 </html>
