--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Nesim Mehdi  
-        <a href="cv.html">CV</a>
+        <a href="cncv.html">CV</a>
     </h1>
 </body>
 </html>
