--- a/cncv.html
+++ b/cncv.html
@@ -79,7 +79,7 @@
                         <h4 class="education-title">CNC Operatör</h4>
                         <h4 class="education-place">Kunskapscompaniet AB Gävle / "Pågående Slutar 31 OKT"</h4>
                         <p>
-                            Jag har <strong><em>Bascetifikat</em></strong> som <strong>CNC & Svets tekniker </strong>. Slutdatum kan varieras beroende på deltagaren i kursen och jag har möjligheten att avsluta tidigare som jag blir anställd. Jag får den gröna certifikatet när utbildningen är klar.
+                            Jag har <strong><em>Bascetifikat</em></strong> som <strong>CNC & Svets tekniker </strong>. Slutdatum kan varieras beroende på deltagaren i kursen och jag har möjligheten att avsluta tidigare om jag blir anställd. Jag får den gröna certifikatet när utbildningen är klar.
                         </p>
                     </div>
                     <div class="education-item">
