--- a/cncv.html
+++ b/cncv.html
@@ -171,7 +171,7 @@
             <div class="content">
                 <p>
                     Hej ,
-                    Jag söker tjänsten CNC operatör på Sandvik, Jag har stort intresse för teknike och mekaniskt arbete som person är jag en samarbetsvillig , kreativ, aktiv med nogranhet och jämt fokus på mitt jobb. Jag är en social positiv person som gillar att sprida positiv enegrgi och glädje till alla runt och kring mig. 
+                    Jag söker tjänsten CNC operatör på Sandvik, Jag har stort intresse för tekniskt och mekaniskt arbete som person är jag en samarbetsvillig , kreativ, aktiv med nogranhet och jämt fokus på mitt jobb. Jag är en social och positiv person som gillar att sprida glädje och positiv energi  till alla runt och kring mig. 
                 </p>
                 <h3 class="main-content-title">work experience</h3>
                 <!-- ===============  1  ================== -->
