--- a/cncv.html
+++ b/cncv.html
@@ -16,7 +16,7 @@
     <header>
         <div id="video">
     <video id="myvideo" autoplay loop>
-        <source src="titlevideo .mp4" >     
+        <source src="titlevideo .mp4" type="video/mp4" >     
         Your browser does not support the video tag.
       </video> 
     </div>
