--- a/cncv.html
+++ b/cncv.html
@@ -20,7 +20,7 @@
         Your browser does not support the video tag.
       </video> 
     </div>
-        <section class="letters">
+        <section class="letters hidden">
             <div>
                 <h2>N</h2>
             </div>
@@ -31,7 +31,7 @@
                 <h2>M</h2>
             </div>
         </section>
-        <h1>NESIM MEHDI</h1>
+        <h1 class="hidden">NESIM MEHDI</h1>
 
         <section class="main-title">
             <div class="vertical-line">
