--- a/cncv.html
+++ b/cncv.html
@@ -87,7 +87,7 @@
                         <p>
                             Jag har <strong><em>Bascertifikat</em></strong> som <strong>CNC & Svets tekniker </strong>. Slutdatum kan 
                             varieras beroende på deltagaren i kursen och jag har möjligheten att avsluta tidigare om jag blir anställd. 
-                            Jag får grönt certifikat, truckkort och traverskort när utbildningen är klar. 
+                            Jag har truckkort och traverskort när utbildningen är klar får jag grönt CNC certifikat. 
                             <strong>Jag har rätt till nystarstjobb </strong>
                         </p>
                     </div>
