--- a/cncv.html
+++ b/cncv.html
@@ -87,8 +87,8 @@
                         <p>
                             Jag har <strong><em>Bascertifikat</em></strong> som <strong>CNC & Svets tekniker </strong>. Slutdatum kan 
                             varieras beroende på deltagaren i kursen och jag har möjligheten att avsluta tidigare om jag blir anställd. 
-                            Jag har truckkort och traverskort när utbildningen är klar får jag grönt CNC certifikat. 
-                            <strong>Jag har rätt till nystarstjobb </strong>
+                            Jag har<strong><em>truckkort och traverskort</em></strong>  när utbildningen är klar får jag grönt CNC certifikat. 
+                            <strong>Jag har rätt till nystarstjobb.</strong>
                         </p>
                     </div>
                   
