--- a/cncv.html
+++ b/cncv.html
@@ -87,7 +87,7 @@
                         <p>
                             Jag har <strong><em>Bascertifikat</em></strong> som <strong>CNC & Svets tekniker </strong>. Slutdatum kan 
                             varieras beroende på deltagaren i kursen och jag har möjligheten att avsluta tidigare om jag blir anställd. 
-                            Jag har<strong><em>truckkort och traverskort</em></strong>  när utbildningen är klar får jag grönt CNC certifikat. 
+                            Jag har <strong><em>truckkort och traverskort</em></strong>  när utbildningen är klar får jag grönt CNC certifikat. 
                             <strong>Jag har rätt till nystarstjobb.</strong>
                         </p>
                     </div>
@@ -162,6 +162,7 @@
                     <h3 class="sidebar-title">driving license</h3>
                     <h4 class="education-title">driving license catagory</h4>
                     <p>B Körkort & Taxi Körkort</p>
+                    <p>Truck & Travers</p>
                 </div>
 
                 <div class="driving-license">
