--- a/cncv.html
+++ b/cncv.html
@@ -31,7 +31,7 @@
                 <h2>M</h2>
             </div>
         </section>
-        <h1 class="hidden">NESIM MEHDI</h1>
+        <h1>NESIM MEHDI</h1>
 
         <section class="main-title">
             <div class="vertical-line">
