--- a/cncv.html
+++ b/cncv.html
@@ -83,11 +83,10 @@
                     </h3>
                     <div class="education-item">
                         <h4 class="education-title">CNC Operatör</h4>
-                        <h4 class="education-place">Kunskapscompaniet AB Gävle / "Pågående Slutar 28 NOV"</h4>
+                        <h4 class="education-place">Kunskapscompaniet AB Gävle</h4>
                         <p>
-                            Jag har <strong><em>Bascertifikat</em></strong> som <strong>CNC & Svets tekniker </strong>. Slutdatum kan 
-                            varieras beroende på deltagaren i kursen och jag har möjligheten att avsluta tidigare om jag blir anställd. 
-                            Jag har <strong><em>truckkort och traverskort</em></strong>  när utbildningen är klar får jag grönt CNC certifikat. 
+                            <strong><em>Bascertifikat</em></strong> som <strong>CNC & Svets tekniker. </strong>
+                            <strong>Grönt CNC-certifikat. </strong>
                             <strong>Jag har rätt till nystarstjobb.</strong>
                         </p>
                     </div>
@@ -167,7 +166,8 @@
 
                 <div class="driving-license">
                     <h3 class="sidebar-title">references</h3>
-                   
+                    <p>Mazin Abdulla / CNC-Lärare</p>
+                    <p>tel: 070-2136958</p>
                     <p>Micke Södermann / Svets-Lärare</p>
                     <p>tel: 070-2137085</p>
 
